# ecommerce

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app_products/: models.py  permissions.py  serializers.py  urls.py  views.py
app_products/migrations/: 0001_initial.py  0002_alter_product_price.py
app_users/: models.py  serializers.py
app_users/migrations/: 0001_initial.py  0002_remove_user_full_name.py
core/: settings.py  urls.py
