[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "djoser>=2.3.1",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "python-decouple>=3.8",
    "redis>=6.4.0",
    "stripe>=12.2.0",
]
